test/files/neg/interop_abstypetags_arenot_classmanifests.scala
import scala.reflect.runtime.universe._

object Test extends App {
  def weakTypeTagIsnotClassManifest[T: WeakTypeTag] = {
    println(classManifest[T])
  }

  weakTypeTagIsnotClassManifest[Int]
  weakTypeTagIsnotClassManifest[String]
  weakTypeTagIsnotClassManifest[Array[Int]]
}