test/files/neg/interop_abstypetags_arenot_classmanifests.check
interop_abstypetags_arenot_classmanifests.scala:5: error: No ClassManifest available for T.
    println(classManifest[T])
                         ^
one error found
